<?xml version="1.0"?>
<package>
  <name>wheelchair_iaslab_gazebo</name>
  <version>0.0.1</version>
  <description>The wheelchair_iaslab_gazebo package</description>

  <maintainer email="alberto.gottardi@studenti.unipd.it">Alberto Gottardi</maintainer>

  <author email="alberto.gottardi@studenti.unipd.it">Alberto Gottardi</author>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>wheelchair_iaslab_description</run_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>rostopic</run_depend>


  <export>
    <gazebo_ros
      gazebo_plugin_path="${prefix}/lib"
      gazebo_media_path="${prefix}"
      gazebo_model_path="${prefix}/models:${prefix}/..:${prefix}"/>
  </export>

</package>
